fileSaver now encodes file contents to base64 and config is no longer automatically converted to json